--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,21 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if flash[:notice] %>
+      <div class="container">
+        <div class="row">
+          <div class="alert alert-success"><%= notice %></div>
+        </div>
+      </div>
+    <% end %>
 
+    <% if flash[:alert] %>
+       <div class="container">
+         <div class="row">
+           <div class="alert alert-danger"><%= alert %></div>
+         </div>
+       </div>
+    <% end %>
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
