--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,28 @@
   </head>
 
   <body>
+  </br>
+  </br>
+  </br>
     <% if flash[:notice] %>
       <div class="container">
         <div class="row">
-          <div class="alert alert-success"><%= notice %></div>
+          <div class="alert alert-success alert-dismissible" role="alert">
+           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+           <%= notice %>
+           </div>
         </div>
       </div>
     <% end %>
 
     <% if flash[:alert] %>
-       <div class="container">
-         <div class="row">
-           <div class="alert alert-danger"><%= alert %></div>
-         </div>
+      <div class="container">
+        <div class="row">
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <%= alert %>
+          </div>
+        </div>
        </div>
     <% end %>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -34,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Restaurant Forum</a>
+          <%= link_to "Restaurant Forum", root_path, class: "navbar-brand"%>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,6 +53,9 @@
             <ul class="dropdown-menu">
               <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
               <li><%= link_to('Change your password', edit_user_registration_path) %></li>
+              <% if current_user.admin? %>
+                <li><%= link_to 'Admin', admin_restaurants_path %></li>
+              <% end %>
             <% else %>
               <li><%= link_to('Sign up', new_user_registration_path) %></li>
               <li><%= link_to('Login', new_user_session_path) %></li>
