--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,14 +1,30 @@
-
+<div class="container">
 <h1>Welcome Admin</h1>
-<ul>
-  <% @restaurants.each do |restaurant| %>
-  <li>
-    <%= restaurant.name %>
-    <%= link_to 'Show', admin_restaurant_path(restaurant) %>
-    <%= link_to 'Edit', edit_admin_restaurant_path(restaurant)%>
-    <%= link_to 'Delete',admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
-  </li>
-  <% end %>
-</ul>
-<%= paginate @restaurants %> <br>
-<%= link_to 'New Restaurant', new_admin_restaurant_path%>
+<div class="col-mid-12">
+  <div> <%= link_to 'New Restaurant', new_admin_restaurant_path%> </div>
+  <br>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @restaurants.each do |restaurant| %>
+      <tr>
+        <th scope="row"><%= restaurant.id %></th>
+        <td><%= restaurant.name %></td>
+        <td>
+          <%= link_to 'Show', admin_restaurant_path(restaurant) %>
+          <%= link_to 'Edit', edit_admin_restaurant_path(restaurant)%>
+          <%= link_to 'Delete',admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="text-center"> <%= paginate @restaurants %> </div>
+</div>
+</div>
