--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <h1>Welcome Admin</h1>
 <div class="col-mid-12">
-  <div> <%= link_to 'New Restaurant', new_admin_restaurant_path%> </div>
+  <div><%= link_to 'Share Your Restaurant', new_admin_restaurant_path, class: "btn btn-primary btn-lg active"%></div>
   <br>
   <table class="table table-striped table-bordered">
     <thead>
