--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-md-12">
       <h1><%= @restaurant.name%></h1>
+      <h5>[<%= @restaurant.category.name %>]</h5>
     </div>
+
     <div class="col-md-4">
       <%= image_tag @restaurant.image, class: "img-responsive center-block" %>
       <br>
