--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -11,8 +11,14 @@
         <%= f.text_field :name, placeholder: "Enter a Category Name", class: "form-control" %>
       </div>
       <%= f.submit class: "btn btn-primary" %>
+      <div class="form-group">
+        <% if @category.errors.any? %>
+          <%= @category.errors.full_messages.to_sentence %>
+        <% end %>
+      </div>
       <% end %>
   </div>
+
   <br>
   <div class="col-mid-12">
     <table class="table table-striped table-bordered">
