--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -26,6 +26,7 @@
         <tr>
           <th>#</th>
           <th>Category</th>
+          <th>Options</th>
         </tr>
       </thead>
       <tbody>
@@ -33,6 +34,7 @@
         <tr>
           <th scope="row"><%= category.id %></th>
           <td><%= category.name %></td>
+          <td><%= link_to 'Edit', admin_categories_path(id: category.id) %> | <%= link_to 'Delete', admin_category_path(category), method: :delete, data: { confirm: "Are you sure?"} %></td>
         </tr>
         <% end %>
       </tbody>
