--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,6 +21,19 @@
     </div>
     <div class="clearfix"></div>
     <hr>
+    <div class="container">
+      <div class="row">
+        <%= form_for [@restaurant, @comment] do |f| %>
+          <div class="form-group">
+            <%= f.text_area :content, placeholder: "Write something here!", class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Comment", class: "btn btn-primary" %>
+            <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
 <%= link_to 'Back to index', restaurants_path %>
   </div>
 </div>
