--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,8 @@
               <li><%= link_to('Change your password', edit_user_registration_path) %></li>
               <% if current_user.admin? %>
                 <li><%= link_to 'Admin', admin_restaurants_path %></li>
+              <% else %>
+                <<li><%=link_to 'Profile', user_path(current_user) %></li>
               <% end %>
             <% else %>
               <li><%= link_to('Sign up', new_user_registration_path) %></li>
