--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,12 +51,12 @@
             <% if current_user %>
             <p class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hi, <%= current_user.email %><span class="caret"></span></p>
             <ul class="dropdown-menu">
-              <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
-              <li><%= link_to('Change your password', edit_user_registration_path) %></li>
+              <li><%= link_to('Log Out', destroy_user_session_path, method: :delete) %></li>
+              <li><%= link_to('Change Password', edit_user_registration_path) %></li>
               <% if current_user.admin? %>
                 <li><%= link_to 'Admin', admin_restaurants_path %></li>
               <% else %>
-                <<li><%=link_to 'Profile', user_path(current_user) %></li>
+                <li><%=link_to 'Profile', user_path(current_user) %></li>
               <% end %>
             <% else %>
               <li><%= link_to('Sign up', new_user_registration_path) %></li>
