rails generate uploader user and add the function on edit page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,29 @@
 <div class="container">
   <div class="row">
+    <div class="col-xs-12 col-sm-6">
     <%= form_for @user do |f| %>
-      <div class="form-group">
-        <%= f.label :name, "Name" %>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :intro, "Introduction" %>
-        <%= f.text_area :intro, class: "form-control" %>
-      </div>
-      <div class="form-group">
-         <%= f.submit "Update", class: "btn btn-primary" %>
-         <%= link_to "Cancel", user_path(@user), class: "btn btn-default" %>
-      </div>
+    <div class="form-group">
+      <%= f.label :avatar, "Upload Your Avatar" %>
+      <%= image_tag @user.avatar if @user.avatar? %>
+      <%= f.file_field :avatar %>
+    </div>
+    <% end %>
+    </div>
+    <div class="col-sm-6">
+      <%= form_for @user do |f| %>
+        <div class="form-group">
+          <%= f.label :name, "Name" %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :intro, "Introduction" %>
+          <%= f.text_area :intro, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Update", class: "btn btn-primary" %>
+          <%= link_to "Cancel", user_path(@user), class: "btn btn-default" %>
+        </div>
+    <% end %>
+    </div>
   </div>
 </div>
