--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="page-header">
       <div class="col-xs-12 col-sm-6">
-        <%= @user.avatar %>
+        <%= image_tag @user.avatar, class: "img-responsive img-rounded"%>
       </div>
       <div class="col-sm-6">
         <h2><%= @user.name %></h2>
         <p><%= @user.email %></p>
         <div><%= simple_format @user.intro %></div>
-          <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
+        <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
       </div>
       <div class="clearfix"></div>
     </div>
