--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,11 @@
       </div>
       <div class="col-sm-6">
         <h2><%= @user.name %></h2>
-        <p><%= @user.email %></p>
-        <div><%= simple_format @user.intro %></div>
-        <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
+        <p>Email: <%= @user.email %></p>
+        <div>Introduction:<br><%= simple_format @user.intro %></div>
+        <% if @user.email == current_user.email %>
+          <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
+        <% end %>
       </div>
       <div class="clearfix"></div>
     </div>
