add img to fake userdata and display the user name of comments on restaurant show page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -23,6 +23,11 @@
     display: inline-block;
 }
 .edit_user img{
-  width: 50px;
+  width: 50%;
+  height: 50%;
   margin: 10px;
+}
+.avatar{
+  width: 50%;
+  height: 50%;
 }
