--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -5,7 +5,7 @@
   margin-bottom: 20px;
 }
 
-.img-responsive {
+.restaurant-item img{
   height: 250px;
   width: 100%;
 }
@@ -30,4 +30,13 @@
 .avatar{
   width: 50%;
   height: 50%;
+}
+.my-restaurant {
+  display: inline-block;
+  text-align: center;
+  padding: 7px 7px 0 7px;
+}
+.my-restaurant img{
+  max-height: 100%;
+  max-width: 150px;
 }
