--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,25 @@
           <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
         <% end %>
       </div>
-      <div class="clearfix"></div>
     </div>
   </div>
 </div>
+<div class="clearfix"></div>
+<br>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong><%= @commented_restaurants.count%></strong> Commented Restaurants</h3>
+          </div>
+          <div class="panel-body">
+            <% @commented_restaurants.each do |restaurant|%>
+            <div class="my-restaurant">
+            <% for img_id in 1..10 %>
+              <% if image_path(restaurant.image).include?('/model'+img_id.to_s+'.jpg') %>
+                <%= image_tag('/img/model'+img_id.to_s+'.jpg', class: "img-responsive img-rounded")%>
+              <% end %>
+            <% end %>
+            <%= link_to restaurant.name, restaurant_path(restaurant) %>
+            </div>
+            <% end %>
+          </div>
+        </div>
