--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="page-header">
       <div class="col-xs-12 col-sm-6">
-        <%= image_tag @user.avatar, class: "img-responsive img-rounded avatar"%>
+        <% if image_path(@user.avatar).include?('/avatar.png') %>
+          <%= image_tag('/img/avatar.png', class: "img-responsive img-rounded avatar")%>
+        <% end %>
       </div>
       <div class="col-sm-6">
         <h2><%= @user.name %></h2>
