add basic links to views associated with ranking and add ranking view

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,7 @@
 <ul class="nav nav-tabs">
   <li role="presentation" class="<%= "active" if @categories %>"><%= link_to 'Home',root_path %></li>
   <li role="presentation"><%= link_to 'Latest Status',feeds_restaurants_path %></li>
+  <li role="presentation"><%= link_to 'Top 10 Restaurants',ranking_restaurants_path %></li>
 </ul>
 <br>
 
