--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -40,3 +40,9 @@
   max-height: 100%;
   max-width: 150px;
 }
+.ranking-item{
+  margin-bottom: 15px;
+}
+.ranking-item span{
+  font-size: 15px;
+}
