--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
     <li>
       <%= user.name %>
       <%= link_to 'Follow', followships_path(followed_id: user), method: :post %>
+      <%= link_to 'Unfollow', followship_path(user), method: :delete %>
     </li>
   <% end %>
 
