--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,11 +3,13 @@
   <% @users.each do |user| %>
     <li>
       <%= user.name %>
-      <% if current_user.followed?(user)%>
-        <%= link_to 'Unfollow', followship_path(user), method: :delete %>
-      <% else %>
-        <%= link_to 'Follow', followships_path(followed_id: user), method: :post %>
-      <% end %>
+      <% if user != current_user %>
+        <% if current_user.followed?(user)%>
+          <%= link_to 'Unfollow', followship_path(user), method: :delete %>
+        <% else %>
+          <%= link_to 'Follow', followships_path(followed_id: user), method: :post %>
+        <% end %>
+      <% end %> 
     </li>
   <% end %>
 
