styled views user index and other related views pages

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -46,3 +46,10 @@
 .ranking-item span{
   font-size: 15px;
 }
+.user-item{
+  margin-bottom: 15px;
+}
+.user-item img{
+  width: 50%;
+  height:50%;
+}
