--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,15 @@
-<ul class="nav nav-tabs">
-  <li role="presentation" class="<%= "active" if @categories %>"><%= link_to 'Home',root_path %></li>
-  <li role="presentation"><%= link_to 'Latest Status',feeds_restaurants_path %></li>
-  <li role="presentation"><%= link_to 'Top 10 Restaurants',ranking_restaurants_path %></li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="<%= "active" if @categories %>"><%= link_to 'Home',root_path %></li>
+        <li role="presentation"><%= link_to 'Latest Status',feeds_restaurants_path %></li>
+        <li role="presentation"><%= link_to 'Top 10 Restaurants',ranking_restaurants_path %></li>
+        <li role="presentation"><%= link_to 'Foodies',users_path %></li>
+      </ul>
+    </div>
+  </div>
+</div>
 <br>
 
 <div class="container">
