--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,14 +50,23 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
-            <p class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hi, <%= current_user.email %><span class="caret"></span></p>
+            <h4 class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="glyphicon glyphicon-align-justify"></span></h4>
             <ul class="dropdown-menu">
-              <li><%= link_to('Log Out', destroy_user_session_path, method: :delete) %></li>
-              <li><%= link_to('Change Password', edit_user_registration_path) %></li>
+              <li><%= link_to destroy_user_session_path, method: :delete do%>
+                    <i class="glyphicon glyphicon-log-out"></i> Log Out
+                  <% end %>
+              </li>
+              <li><%= link_to edit_user_registration_path do%>
+                    <i class="glyphicon glyphicon-wrench"></i> Change Password
+                  <% end %>
+              </li>
               <% if current_user.admin? %>
                 <li><%= link_to 'Admin', admin_restaurants_path %></li>
               <% else %>
-                <li><%=link_to 'Profile', user_path(current_user) %></li>
+                <li><%=link_to user_path(current_user) do%>
+                      <i class="glyphicon glyphicon-user"></i> Profile
+                    <% end %>
+                </li>
               <% end %>
             <% else %>
               <li><%= link_to('Sign up', new_user_registration_path) %></li>
