--- a/app/views/shared/_like.html.erb
+++ b/app/views/shared/_like.html.erb
@@ -1,5 +1,9 @@
 <% if restaurant.is_liked?(current_user) %>
-  <%= link_to 'Dislike', dislike_restaurant_path(restaurant), method: :post, class: "btn btn-info" %>
+  <%= link_to dislike_restaurant_path(restaurant), method: :post, class: "btn btn-info" do%>
+    <%= fa_icon "heart", text: "Dislike" %>
+  <% end %>
 <% else %>
-  <%= link_to 'Like', like_restaurant_path(restaurant), method: :post, class: "btn btn-primary" %>
+  <%= link_to  like_restaurant_path(restaurant), method: :post, class: "btn btn-primary" do%>
+    <%= fa_icon "heart-o", text: "Like" %>
+  <% end %>
 <% end %>
