--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,6 +27,7 @@
           <% end %>
           <h4><%= link_to user.name, user_path(user) %></h4>
           <%= render partial: "shared/follow", locals: {user: user} %>
+          <%= render partial: "shared/friend", locals: {user: user} %>
         </div>
       <% end %>
     <% end %>
