--- a/app/views/shared/_friend.html.erb
+++ b/app/views/shared/_friend.html.erb
@@ -1,6 +1,11 @@
 <% if user != current_user %>
-  <% if current_user.friended?(user)%>
-    <%= link_to 'Unfriend', friendship_path(user), method: :delete, class: "btn btn-primary"%>
+
+  <% if current_user.accepted?(user) %>
+    <%= link_to 'Unfriend', friendship_path(user), method: :delete, class: "btn btn-primary" %>
+  <% elsif current_user.pending?(user) %>
+    <%= link_to 'Cancel Request', cancel_friendship_path(user), method: :post, class: "btn btn-primary" %>
+  <% elsif current_user.inverse_friended?(user) %>
+    <%= link_to 'Accept Request', accept_friendship_path(user), method: :post, class: "btn btn-primary" %>
   <% else %>
     <%= link_to friendships_path(friend_id: user), method: :post, class: "btn btn-success" do%>
       <i class="glyphicon glyphicon-plus"></i> Friend
